@@ -1,7 +1,7 @@
 /*****************************************************************************\
  *  $Id: wrappers.c 912 2008-05-31 01:28:46Z garlick $
  *****************************************************************************
- *  Copyright (C) 2001-2002 The Regents of the University of California.
+ *  Copyright (C) 2001-2008 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
  *  Written by Andrew Uselton <uselton2@llnl.gov>
  *  Select/Poll wrap and Malloc debug added by Jim Garlick <garlick@llnl.gov>
