@@ -1,3 +1,29 @@
+/*****************************************************************************\
+ *  $Id: arglist.c 916 2008-06-01 17:31:56Z garlick $
+ *****************************************************************************
+ *  Copyright (C) 2004-2008 The Regents of the University of California.
+ *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
+ *  Written by Jim Garlick <garlick@llnl.gov>
+ *  UCRL-CODE-2002-008.
+ *  
+ *  This file is part of PowerMan, a remote power management program.
+ *  For details, see <http://www.llnl.gov/linux/powerman/>.
+ *  
+ *  PowerMan is free software; you can redistribute it and/or modify it under
+ *  the terms of the GNU General Public License as published by the Free
+ *  Software Foundation; either version 2 of the License, or (at your option)
+ *  any later version.
+ *  
+ *  PowerMan is distributed in the hope that it will be useful, but WITHOUT 
+ *  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
+ *  FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License 
+ *  for more details.
+ *  
+ *  You should have received a copy of the GNU General Public License along
+ *  with PowerMan; if not, write to the Free Software Foundation, Inc.,
+ *  59 Temple Place, Suite 330, Boston, MA  02111-1307  USA.
+\*****************************************************************************/
+
 #if HAVE_CONFIG_H
 #include "config.h"
 #endif
@@ -30,3 +56,7 @@ xsigfunc_t *xsignal(int signo, xsigfunc_t *func)
 
     return (oact.sa_handler);
 }
+
+/*
+ * vi:tabstop=4 shiftwidth=4 expandtab
+ */
